--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>OVERWATCH</title>
 </head>
 <body>
-    
+
+    <div class="search__container">
+        <form action="" class="search-form">
+            <input type="search">
+            <input type="submit">
+        </form>
+    </div>
+
+    <main>
+        <section class="hero__container">
+
+        </section>
+    </main>
+    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <script src="dev/scripts/main.js"></script>
 </body>
 </html>
