--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <main>
         <section class="hero__container">
+            <ul class="hero__card">
 
+            </ul>
         </section>
     </main>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
