sync for pulling org master

--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
     <title>OVERWATCH</title>
 </head>
 <body>
-
     <div class="search__container">
         <form action="" class="search-form">
             <input type="search">
             <input type="submit">
         </form>
     </div>
+    <div class="results__container">
 
-    <main>
-        <section class="hero__container">
+    </div>
 
-        </section>
-    </main>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src="dev/scripts/main.js"></script>
 </body>
