--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dev/styles/main.scss">
+    <link rel="stylesheet" href="public/styles/style.css">
     <title>OVERWATCH</title>
     <style> /* Set the size of the div element that contains the map */ #map { height: 400px; /* The height is 400 pixels */ width:
     100%; /* The width is the width of the web page */ }
@@ -12,21 +12,33 @@
 
 </head>
 <body>
-
-    <div class="search__container">
-        <form action="" class="search-form">
-            <input type="search">
-            <input type="submit">
-        </form>
-    </div>
-
+    <div class="opening__overlay"><img src="" alt=""></div>
+    <header>
+        <h1>Overwatch Database</h1>
+        <div class="search__container">
+            <form action="" class="search-form">
+                <input type="search">
+                <input type="submit">
+            </form>
+        </div>
+    </header>
     <main>
+        <aside>
+
+        </aside>
         <section class="hero__container">
+            <figure>
+                <img src="" alt="">
+            </figure>
+
             <ul class="hero__card">
 
             </ul>
         </section>
     </main>
+    <footer>
+        <div class="credit"></div>
+    </footer>
 
     <div id="map">
 
