ok js is functional *cries*

--- a/index.html
+++ b/index.html
@@ -67,20 +67,19 @@
     <main>
         <aside>
             <section class="search__results__heading">
-                <h3></h3>
+                <h3>Hero Results:</h3>
             </section>
-            <section class="search__results__container">
+            <section class="search__results__card">
                 <h4 class="hero__card__heading"></h4>
                 <figure class="hero__card">
-                    <img src="">
                     <figcaption class="hero__card__fig"></figcaption>
                 </figure>
             </section>
         </aside>
 
         <section class="hero__container">
-            <figure>
-                <img src="" alt="">
+            <figure class="hero__image">
+                
             </figure>
             <ul class="hero__info">
             </ul>
