--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,18 @@
     <link href=“https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i” rel=“stylesheet”>
     <link rel="stylesheet" href="public/styles/style.css">
     <title>OVERWATCH</title>
-    <style> /* Set the size of the div element that contains the map */ #map { height: 400px; /* The height is 400 pixels */ width:
-    100%; /* The width is the width of the web page */ }
+    <style>
+        /* Set the size of the div element that contains the map */
+        #map {
+            height: 400px;
+            /* The height is 400 pixels */
+            width: 100%;
+            /* The width is the width of the web page */
+        }
     </style>
-
 </head>
+
 <body>
-<!-- -----------HEADER SECTION------------ -->
     <header>
         <div class="wrapper">
             <figure class="OW__Logo">
@@ -22,28 +28,28 @@
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 600 600"
                     style="enable-background:new 0 0 600 600;" xml:space="preserve">
                     <!-- <style type="text/css">
-                                        .st0 {
-                                            fill: #4A4C4E;
-                                        }
-                                
-                                        .st1 {
-                                            fill: #FA9C1E;
-                                        }
-                                    </style> -->
+                                    .st0 {
+                                        fill: #4A4C4E;
+                                    }
+                            
+                                    .st1 {
+                                        fill: #FA9C1E;
+                                    }
+                                </style> -->
                     <g id="svg3960" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
                         xmlns:svg="http://www.w3.org/2000/svg">
                     </g>
                     <g id="large__bit">
                         <path id="path4052" class="large__bit" d="M93.6,82.3C33.9,138.3-1.1,219.9,0,302.1c0,85.4,39,169.2,103.7,224.7
-                                        c59.8,52.3,141.1,78.9,220.5,72.2c86-6.4,167.6-52.3,218.1-122.1c49.1-66.3,68.4-153.8,52.1-234.9c-12-62.1-44.5-119.6-90.8-162.4
-                                        l-56.7,65.8c45.7,43,70.6,106.6,65.9,169.2c-2.1,31-11.1,61.7-26.3,89L370.9,292l-58.3-125.6l-0.1,190.2l116.7,112.9
-                                        c-52,40.4-123.4,53.8-186.6,35.9c-25.7-7.2-50.1-19.2-71.3-35.4l117.5-113.4c-0.2-61.8,0.7-128.6,0-190.4L230.5,292L114.1,404.4
-                                        c-35.5-62-36.4-142.2-2.2-204.9c10.7-20.1,24.8-38.4,41.3-54.2L96.5,79.5C95.5,80.4,94.6,81.3,93.6,82.3z"
+                                    c59.8,52.3,141.1,78.9,220.5,72.2c86-6.4,167.6-52.3,218.1-122.1c49.1-66.3,68.4-153.8,52.1-234.9c-12-62.1-44.5-119.6-90.8-162.4
+                                    l-56.7,65.8c45.7,43,70.6,106.6,65.9,169.2c-2.1,31-11.1,61.7-26.3,89L370.9,292l-58.3-125.6l-0.1,190.2l116.7,112.9
+                                    c-52,40.4-123.4,53.8-186.6,35.9c-25.7-7.2-50.1-19.2-71.3-35.4l117.5-113.4c-0.2-61.8,0.7-128.6,0-190.4L230.5,292L114.1,404.4
+                                    c-35.5-62-36.4-142.2-2.2-204.9c10.7-20.1,24.8-38.4,41.3-54.2L96.5,79.5C95.5,80.4,94.6,81.3,93.6,82.3z"
                         />
                     </g>
                     <g id="small__bit">
                         <path id="path3961" class="small__bit" d="M296.7,0c-66.8,0.4-132.8,24.2-184.6,66.1l56.7,65.8c47.8-37.7,112.3-53.1,172-41.2
-                                        c32.8,6.3,64.1,20.7,90.5,41.2l56.7-65.8C434.2,22.8,365.8-1,296.7,0z" />
+                                    c32.8,6.3,64.1,20.7,90.5,41.2l56.7-65.8C434.2,22.8,365.8-1,296.7,0z" />
                     </g>
                 </svg>
             </figure>
@@ -63,50 +69,40 @@
         </div>
 
     </header>
-<!-- -----------MAIN SECTION------------ -->
+
     <main>
-        <div class="wrapper">
-            <aside>
-                <section class="search__results__heading">
-                    <h3></h3>
-                </section>
-
-                <section class="search__results__container">
-                    <h4 class="hero__card__heading"></h4>
-                    <figure class="hero__card">
-                        <img src="">
-                        <figcaption class="hero__card__fig"></figcaption>
-                    </figure>
-                </section>
-
-            </aside>
-
-            <section class="hero__container">
-                <figure class="hero__image">
-                    <img src="" alt="">
-                </figure>
-
-                <div>
-                    <ul class="hero__info">
-                    </ul>
-                </div>
-
-                <div id="map">
-                </div>
+        <aside>
+            <section class="search__results__heading">
+                <h3></h3>
             </section>
-        </div>
+            <section class="search__results__container">
+                <h4 class="hero__card__heading"></h4>
+                <figure class="hero__card">
+                    <img src="">
+                    <figcaption class="hero__card__fig"></figcaption>
+                </figure>
+            </section>
+        </aside>
+        <section class="hero__container">
+            <figure class="hero__image">
+                <img src="" alt="">
+            </figure>
+            <ul class="hero__info">
+            </ul>
+            <div id="map">
+
+
+            </div>
+        </section>
     </main>
-<!-- -----------FOOTER SECTION------------ -->
     <footer>
         <div class="credit"></div>
     </footer>
-
-    <div id="map">
-    </div>
-
-    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='
+        crossorigin='anonymous'></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeTIiHDXlITR2WjpJlf-1AigrB7Tl_r5U">
     </script>
     <script src="dev/scripts/main.js"></script>
 </body>
+
 </html>
