changed BGs for contrast and art why not

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="search__wrapper">
                 <form action="" class="search__container">
                     <input type="search" class="input__bar input__bar--search">
-                    <input type="submit" class="input__submit input__submit--search">
+                    <input type="submit" value="Search" class="input__submit input__submit--search">
                 </form>
             </div>
             <section class="search__results__heading">
