--- a/index.html
+++ b/index.html
@@ -109,13 +109,7 @@
                 </svg>
 
             </figure>
-            <h1 class="visuallyhidden">Overwatch Database</h1>
-            <!-- <div class="search__wrapper">
-                <form action="" class="search__container">
-                    <input type="search" class="input__bar input__bar--search">
-                    <input type="submit" class="input__submit input__submit--search">
-                </form>
-            </div> -->
+            <h1 class="visuallyhidden">Overwatch Hero Database</h1>
 
         </div>
         
@@ -125,7 +119,7 @@
         <aside>
             <div class="search__wrapper">
                 <form action="" class="search__container">
-                    <input type="search" class="input__bar input__bar--search">
+                    <input type="search" placeholder="enter hero name" class="input__bar input__bar--search">
                     <input type="submit" value="Search" class="input__submit input__submit--search">
                 </form>
             </div>
