img src changed in js

--- a/index.html
+++ b/index.html
@@ -123,12 +123,14 @@
                 </form>
             </div>
             <section class="search__results__heading">
-                <h3>Hero Results:</h3>
+                <h3>Results Found:</h3>
             </section>
             <section class="search__results__card">
                 <h4 class="hero__card__heading"></h4>
                 <figure class="hero__card">
-                    <figcaption class="hero__card__fig"></figcaption>
+                    <figcaption class="hero__card__fig">
+                        <h4 class="hero__card__heading"></h4>
+                    </figcaption>
                 </figure>
             </section>
         </aside>
