--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=“https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i” rel=“stylesheet”>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="public/styles/style.css">
     <title>Overwatch Hero Database</title>
 </head>
@@ -47,7 +49,6 @@
                 <input type="submit" class="input__submit input__submit--login">
             </form>
             <figure class="OW__Text">
-                <a href="index.html">
                     <?xml version="1.0" encoding="utf-8"?>
                     <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1500 235"
@@ -103,10 +104,9 @@
                             <path id="rect4024" class="H" d="M1335.6,54v126h44.2v-48.4h74.7V180h43.5V54h-43.5v44.3h-74.7V54H1335.6z" />
                         </g>
                     </svg>
-                </a>
-
             </figure>
             <h1 class="visuallyhidden">Overwatch Hero Database</h1>
+            <a href="index.html"><i class="fas fa-sign-out-alt sign__out"></i></a>
         </div>
     </header>
 
