--- a/index.html
+++ b/index.html
@@ -144,8 +144,15 @@
             </section>
     
         </main>
-    <footer>
-        <div class="credit"></div>
+    <footer class="visuallyhidden">
+        <div class="credit">
+            We don't own any of these images and could not have made this project without the art sourced from different artists:
+            Hero Images were obtained via http://overwatch.wikia.com/wiki/Overwatch_Wiki
+            and some background images were obtained from:
+            https://www.reddit.com/r/Overwatch/comments/6cjw2p/nepal_map_view_from_the_sombra_bug_edited_into_a/ 
+            https://blisschen.tumblr.com/
+            http://www.hdwallpaperspulse.com/free-background-2.html
+        </div>
     </footer>
 
 
