--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href=“https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i” rel=“stylesheet”>
+    <link href=“https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i|Anton” rel=“stylesheet”>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="public/styles/style.css">
