--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <section class="search__results__card">
                     <figure class="hero__card">
                         <figcaption class="hero__card__fig">
-                            <!-- <h4 class="hero__card__heading"></h4> -->
+                          
                         </figcaption>
                     </figure>
                     <h4 class="hero__card__heading"></h4>
@@ -144,8 +144,8 @@
             </section>
     
         </main>
-    <footer class="visuallyhidden">
-        <div class="credit">
+    <footer >
+        <div class="visuallyhidden credit">
             We don't own any of these images and could not have made this project without the art sourced from different artists:
             Hero Images were obtained via http://overwatch.wikia.com/wiki/Overwatch_Wiki
             and some background images were obtained from:
@@ -153,6 +153,7 @@
             https://blisschen.tumblr.com/
             http://www.hdwallpaperspulse.com/free-background-2.html
         </div>
+        <section class="copyright"><h6>© Jesse and Erin 2018</h6></section>
     </footer>
 
 
